objects/Case.object
<CustomObject>
    <fields>
        <fullName>Troubleshooting_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box after checking knowledge and completing troubleshooting steps</inlineHelpText>
        <label>Troubleshooting Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Location</fullName>
                </value>
                <value>
                    <fullName>Additions</fullName>
                </value>
                <value>
                    <fullName>Removals</fullName>
                </value>
                <value>
                    <fullName>Swaps</fullName>
                </value>
                <value>
                    <fullName>Complete Removal</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Software Upgrades</fullName>
                </value>
                <value>
                    <fullName>Gaming Area Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that investigates the Facility Pay</description>
        <label>Investigated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VGT_Asset__c</fullName>
        <formula>Asset.SAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAS Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <label>Voucher Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>WorkType filter exception</errorMessage>
            <filterItems>
                <field>WorkType.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Solution__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Assigned_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases_Today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_Category__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Solution__c</columns>
        <columns>Tech_Notes__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Closed Cases Today</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PriorityLookup__c</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Open Cases Today</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Center_Assigned_Resource</fullName>
        <columns>PriorityLookup__c</columns>
        <columns>Service_Appointment_Priority__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <filters>
            <field>Assigned_Resource_Profile__c</field>
            <operation>contains</operation>
            <value>call</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Call Center Assigned Resource</label>
        <sharedTo>
            <role>Call_Center_Agent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_History</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>ASSET.NAME</columns>
        <columns>Model__c</columns>
        <columns>Serial__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>G2S_Updated__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Solution__c</columns>
        <columns>Tech_Notes__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Case History Look Up</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Champaign_Watseka_Open_Cases</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Champaign</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Watseka</value>
        </filters>
        <label>Champaign/Watseka Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Champaign_Watseka_Yesterday_Today_s</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND (4 or 5)</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Watseka</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Champaign</value>
        </filters>
        <label>Champaign/Watseka Yesterday &amp; Today’s</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chicagoland_Central_Open_Cases</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>contains</operation>
            <value>Chicagoland Central</value>
        </filters>
        <label>Chicagoland Central Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chicagoland_Open_Cases_1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>contains</operation>
            <value>Chicagoland</value>
        </filters>
        <label>Chicagoland Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collinsville_Open_Cases</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>Collinsville Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collinsville_Yesterday_Today_s_Open</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>Collinsville Yesterday &amp; Today’s Open</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GA_All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Account_State__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account_State__c</field>
            <operation>equals</operation>
            <value>GA</value>
        </filters>
        <label>GA All Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GA_Yesterday_Today_s_Open_Cases</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Assigned_Rank__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>Account_State__c</field>
            <operation>equals</operation>
            <value>GA</value>
        </filters>
        <label>GA Yesterday &amp; Today’s Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IL_All_Open_Cases</fullName>
        <columns>PriorityLookup__c</columns>
        <columns>Three_Month_Average_HPD__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Account_State__c</columns>
        <columns>Service_Region__c</columns>
        <columns>Assigned_Resource__c</columns>
        <columns>VGT_Asset__c</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account_State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>IL All Open Cases</label>
        <sharedTo>
            <group>Case_List_View_Visibility</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Call_Center</fullName>
        <active>true</active>
        <businessProcess>Call Center</businessProcess>
        <label>Call Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Pay</fullName>
        <active>false</active>
        <businessProcess>Case</businessProcess>
        <label>Facility Pay</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Reason_for_Solution_Manager_required</fullName>
        <active>true</active>
        <description>If the case is assigned to “someone with the title containing the word ‘solution(s) manager’ a reason for solution manager field must have a value. A person who is a solution manager but assigns the case to another solutions manager needs to enter a value</description>
        <errorConditionFormula>/*all users except for the Solution(s) Managers are required to select a Reason for Solution Manager value*/

and(

or(
CONTAINS(Assigned_Resource__r.Title , &quot;Solutions Manager&quot;),
CONTAINS(Assigned_Resource__r.Title , &quot;Solution Manager&quot;)
),
$User.Id &lt;&gt; Assigned_Resource__r.Id,
ispickval( Reason_for_Solution_Manager__c ,&quot;&quot;),
not(contains( $User.Title,&quot;Solutions Manager&quot;))
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Solution_Manager__c</errorDisplayField>
        <errorMessage>A &quot;Reason for Solution Manager&quot; must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Contact_Information</fullName>
        <active>true</active>
        <description>If &quot;Payable to Location&quot; is not checked, all contact information IS required</description>
        <errorConditionFormula>AND(
(RecordType.DeveloperName = &apos;Facility_Pay&apos;),
(Payable_to_Location__c = FALSE),
OR(
ISBLANK(First_Name__c),  
ISBLANK(Last_Name__c),  
ISBLANK(Address__c),    
ISBLANK(Zip__c), 
ISBLANK(PhoneFacility__c ),
ISBLANK(TEXT(State__c)),
ISBLANK(Email_Address__c)))</errorConditionFormula>
        <errorMessage>All Payee Information Is Required</errorMessage>
    </validationRules>
</CustomObject>